<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a61edpamuzicenko.kursadarbs.MainActivity">

    <Button
        android:id="@+id/btn_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="420dp"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/et_Password"
        android:layout_alignEnd="@+id/textView" />

    <EditText
        android:id="@+id/et_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:text="@string/username"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/et_Login"
        android:layout_marginTop="11dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/password"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@+id/et_Login"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/registration"
        android:layout_below="@+id/btn_log"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test_check"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/btn_reg"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
